<resources>
    <string name="app_name">WhatsApp</string>
    <string name="chats">CHATS</string>
    <string name="status">STATUS</string>
    <string name="calls">CALLS</string>
    <string name="new_group">New group</string>
    <string name="new_broadcast">New broadcast</string>
    <string name="whatsapp_web">WhatsApp Web</string>
    <string name="status_item">Status</string>
    <string name="settings">Settings</string>
    <string name="welcome_to_whatsapp">Welcome to WhatsApp</string>
    <string name="_20">+20</string>
    <string name="send">Send</string>
    <string name="read_our_privacy_policy_tap_agree_and_continue_to_accept_terms_of_service">Read our Privacy Policy.Tap Agree and continue to accept Terms of Service</string>
    <string name="todo">TODO</string>
    <string name="enter_sms_code">Enter SMS Code</string>
    <string name="done">Done</string>
    <string name="enter_your_number">Enter Your Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_a_message">Type a Message</string>
</resources>