<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_button"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="search">

    </item>
    <item
        android:id="@+id/item1"
        android:title="@string/new_group"
        app:showAsAction="never">

    </item>
    <item
        android:id="@+id/item2"
        android:title="@string/new_broadcast"
        app:showAsAction="never">

    </item>
    <item
        android:id="@+id/item3"
        android:title="@string/whatsapp_web"
        app:showAsAction="never">

    </item>
    <item
        android:id="@+id/item4"
        android:title="@string/status_item"
        app:showAsAction="never">

    </item>
    <item
        android:id="@+id/item5"
        android:title="@string/settings"
        app:showAsAction="never">

    </item>




</menu>