<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/singup_background"
    tools:context=".SignUp">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/singup_icon"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/whatsapp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcometowhatsapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/singup_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/welcome_to_whatsapp"
        android:textSize="@dimen/_20ssp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/enter_your_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/singup_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_55sdp"
        android:text="@string/enter_your_number"
        android:textSize="@dimen/_15ssp"
        android:fontFamily="sans-serif-medium"/>

    <ImageButton
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/egypt_flag"
        app:layout_constraintBottom_toBottomOf="@id/input_phone"
        app:layout_constraintEnd_toStartOf="@id/input_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/input_phone"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
        android:contentDescription="@string/todo" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_phone"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_48sdp"
        app:layout_constraintTop_toBottomOf="@id/enter_your_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_15sdp"
        android:inputType="phone"
        tools:text="933848845854848"
        android:textSize="@dimen/_15ssp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_35sdp"
        android:background="@drawable/button_background"
        android:text="@string/send"
        android:textColor="@color/white"
        app:backgroundTint="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_phone"
        tools:ignore="TextContrastCheck,TextContrastCheck" />


<com.google.android.material.textview.MaterialTextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/done_btn"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginTop="@dimen/_20sdp"
    android:text="@string/read_our_privacy_policy_tap_agree_and_continue_to_accept_terms_of_service"
    android:textColor="@color/black"
    android:textSize="@dimen/_12ssp"
    android:paddingHorizontal="@dimen/_40sdp"
    android:gravity="center"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sms_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/send_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_25sdp"
        android:text="@string/enter_sms_code"
        android:textSize="@dimen/_15ssp"
        android:fontFamily="sans-serif-medium"/>

    <com.google.android.material.textfield.TextInputEditText
    android:id="@+id/code_txt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/sms_msg"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="@dimen/_15sdp"
    android:inputType="number"
    tools:text="2654"
    android:textSize="@dimen/_20ssp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/done_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/button_background"
        android:text="@string/done"
        android:textColor="@color/white"
        app:backgroundTint="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/code_txt"
        tools:ignore="TextContrastCheck,TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>